--- a/d60.Cirqus.Tests/d60.Cirqus.Tests.csproj
+++ b/d60.Cirqus.Tests/d60.Cirqus.Tests.csproj
@@ -40,6 +40,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Azure.Documents.Client">
+      <HintPath>..\packages\Microsoft.Azure.Documents.Client.0.9.0-preview\lib\net40\Microsoft.Azure.Documents.Client.dll</HintPath>
+    </Reference>
     <Reference Include="MongoDB.Bson">
       <HintPath>..\packages\mongocsharpdriver.1.9.2\lib\net35\MongoDB.Bson.dll</HintPath>
     </Reference>
@@ -81,6 +84,7 @@
     <Compile Include="Aggregates\TestEventApplication.cs" />
     <Compile Include="Commands\TestCustomMetadata.cs" />
     <Compile Include="Contracts\EventStore\EventStoreTest.cs" />
+    <Compile Include="Contracts\EventStore\Factories\AzureDocumentDbFactory.cs" />
     <Compile Include="Contracts\EventStore\IEventStoreFactory.cs" />
     <Compile Include="Contracts\EventStore\Factories\InMemoryEventStoreFactory.cs" />
     <Compile Include="Contracts\EventStore\Factories\MongoDbEventStoreFactory.cs" />
@@ -134,6 +138,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\d60.Cirqus.AzureDocumentDb\d60.Cirqus.AzureDocumentDb.csproj">
+      <Project>{5412467c-ffec-448a-a9f1-d4196278cb1e}</Project>
+      <Name>d60.Cirqus.AzureDocumentDb</Name>
+    </ProjectReference>
     <ProjectReference Include="..\d60.Cirqus.EntityFramework\d60.Cirqus.EntityFramework.csproj">
       <Project>{925D8D5E-B695-4DC0-B1B6-66955C964576}</Project>
       <Name>d60.Cirqus.EntityFramework</Name>
@@ -154,6 +162,9 @@
       <Project>{8E2DF6B4-A4DF-495E-8D74-5DCE6B333FB4}</Project>
       <Name>d60.Cirqus</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="AzureDocumentDb\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
